# secretoxide

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  secox-example.yml
scripts/: install.sh
src/: baseline.rs  cli.rs  git.rs  ignore.rs  lib.rs  main.rs  output.rs  resolve.rs  rotation.rs  rules.rs  scanner.rs  types.rs  validator.rs  verify.rs
tests/: scanner_tests.rs
