[package]
name = "secox"
version = "0.1.0"
edition = "2021"
description = "Zero-setup CLI secret scanner — catches API keys, tokens, and credentials before they leave your machine"
license = "MIT"
keywords = ["security", "secrets", "git", "scanner", "credentials"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "secox_lib"
path = "src/lib.rs"

[[bin]]
name = "secox"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
regex = "1"
walkdir = "2"
anyhow = "1"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
